favicon, title and others

--- a/bitcoin-resources-ui/package.json
+++ b/bitcoin-resources-ui/package.json
@@ -56,6 +56,6 @@
     "last 2 versions",
     "not ie <= 10"
   ],
-  "author": "Creative Tim - https://www.creative-tim.com/",
-  "description": "BootstrapVue Argon Dashboard"
+  "author": "Raúl Cano https://github.com/raulcano",
+  "description": "Bitcoin resources"
 }
