changes title to Bitcoin minds

--- a/bitcoin-resources-ui/package.json
+++ b/bitcoin-resources-ui/package.json
@@ -63,5 +63,5 @@
     "not ie <= 10"
   ],
   "author": "Raúl Cano https://github.com/raulcano",
-  "description": "Bitcoin resources"
+  "description": "Bitcoin minds"
 }
