--- a/bitcoinminds-ui/package.json
+++ b/bitcoinminds-ui/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "4.3.1",
     "bootstrap-vue": "^2.5.0",
@@ -32,6 +33,7 @@
     "perfect-scrollbar": "^1.3.0",
     "quill": "^1.3.6",
     "sweetalert2": "^9.5.4",
+    "tippy.js": "^6.3.1",
     "vee-validate": "^3.2.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
