--- a/bitcoinminds-ui/package.json
+++ b/bitcoinminds-ui/package.json
@@ -37,9 +37,10 @@
     "vee-validate": "^3.2.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
-    "vue-clipboard2": "^0.3.0",
+    "vue-clipboard2": "^0.3.1",
     "vue-flatpickr-component": "^8.1.2",
     "vue-good-table": "^2.21.10",
+    "vue-observe-visibility": "^1.0.0",
     "vue-papa-parse": "^2.0.0",
     "vue-router": "^3.0.6",
     "vue2-transitions": "^0.2.3"
