--- a/bitcoinminds-ui/package.json
+++ b/bitcoinminds-ui/package.json
@@ -40,6 +40,7 @@
     "vue-clipboard2": "^0.3.1",
     "vue-flatpickr-component": "^8.1.2",
     "vue-good-table": "^2.21.10",
+    "vue-gtag": "^1.16.1",
     "vue-observe-visibility": "^1.0.0",
     "vue-papa-parse": "^2.0.0",
     "vue-router": "^3.0.6",
