--- a/bitcoinminds-ui/package.json
+++ b/bitcoinminds-ui/package.json
@@ -52,7 +52,7 @@
     "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-plugin-component": "^1.1.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.49.7",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.11"
   },
